<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.deloitte.mostpopular.ui.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_filter"
            app:destination="@id/navigation_filter" />
        <action
            android:id="@+id/action_navigation_dashboard_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.deloitte.mostpopular.ui.home.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <dialog
        android:id="@+id/navigation_filter"
        android:name="com.deloitte.mostpopular.ui.home.dashboard.filter.FilterBottomSheetFragment"
        android:label="fragment_filter_bottom_sheet"
        tools:layout="@layout/fragment_filter_bottom_sheet" />
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.deloitte.mostpopular.ui.details.NewsDetailsFragment"
        android:label="@string/news_details"
        tools:layout="@layout/fragment_news_details" >
        <argument
            android:name="date"
            app:argType="string" />
        <argument
            android:name="description"
            app:argType="string" />
        <argument
            android:name="imageUrl"
            app:argType="string" />
    </fragment>

</navigation>